# Matrecomm_Project

./: CMakeLists.txt  Matrecomm Task.txt  README.md
include/: EmployeeManagement.h  YBAuthentication.h  YBConnection.h  YBError.h  YBQuery.h  YBResult.h
src/: EmployeeManagement.cpp  YBAuthentication.cpp  YBConnection.cpp  YBError.cpp  YBQuery.cpp  YBResult.cpp
tests/: employee_management_test.cpp  main_test.cpp
